--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "molstar": "^4.10.0",
     "next": "15.1.4",
     "papaparse": "^5.5.1",
+    "pdbe-molstar": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
